--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
         <div class="committee-group">
             <h5 class="committee-group-title">Website Development Committee</h5>
             <ul class="committee-list">
-                <li><b>Dr. Priya Thiayagarajan (CSBS)</b></li>
+                <li><b>Mrs. Priya Thiayagarajan (CSBS)</b></li>
                 <li>Dr. S. R. MathuSudhanan (Dept. of CA)</li>
             </ul>
         </div>
