--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
           <h5>Mr Surendhar</h5>
           <h6>Solution Lead</h6>
           <h7>Conversight.AI, Coimbatore</h7>
-          <p>ACMS Department</p>
+          <p>AMCS Department</p>
         </div>
       </div>
 
@@ -341,7 +341,7 @@
           <h5>Dr Durga Rathinasamy</h5>
           <h6>Data Leader, Deputy General Manager</h6>
           <h7>Samsung Electronics (E-Commerce)</h7>
-          <p>ACMS Department</p>
+          <p>AMCS Department</p>
         </div>
       </div>
 
