--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p class="hero-location">MADURAI - 625015</p>
 
                     <div class="conference-main-title">
-                        <h2 class="main-title">2nd National Level Research Conclave</h2>
+                        <h2 class="main-title">2nd National Level Research Conclave 2026</h2>
                         <h3 class="subtitle">on Digital Transformation and Sustainable Innovation in Engineering and Science</h3>
                     </div>
 
@@ -75,7 +75,7 @@
 <div class="date-extended-banner mt-4 mb-4 text-center">
     <span class="badge bg-warning text-dark px-4 py-3" 
           style="font-size: 1.5rem; font-weight: 700; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.2);">
-        📢 Paper Submission Date Extended to 30th November 2025
+        📢 Paper Submission Date Extended to 28th February 2026
     </span>
 </div>
 
@@ -181,7 +181,8 @@
             The Research Conclave 2026 invites thought leaders, innovators, researchers, and scholars from across the globe to gather and address the urgent need for sustainable solutions. 
             With the theme <strong>"Digital Transformation and Sustainable Innovation in Engineering and Science"</strong> this event serves as a platform for collaborative exploration and actionable solutions for pressing environmental, social, and economic challenges.
           </p>
-        </div>
+          <h6>
+            <strong>2nd National Level Research Conclave - Keynote Speaker Session</strong> <a href="https://forms.gle/hcv4Uiwn4ybdLVP39">Registration Form</a>
       </div>
     </div>
   </div>
@@ -458,7 +459,7 @@
                             <i class="bi bi-calendar-check"></i>
                         </div>
                         <h5>Last date for submission of full paper</h5>
-                        <div class="date-highlight">30/11/2025</div>
+                        <div class="date-highlight">28/02/2026</div>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -467,7 +468,7 @@
                             <i class="bi bi-envelope-check"></i>
                         </div>
                         <h5>Acceptance notification</h5>
-                        <div class="date-highlight">05/01/2026</div>
+                        <div class="date-highlight">10/03/2026</div>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -475,8 +476,8 @@
                         <div class="date-icon">
                             <i class="bi bi-file-earmark-text"></i>
                         </div>
-                        <h5>Final submission</h5>
-                        <div class="date-highlight">09/01/2026</div>
+                        <h5>Final Camera ready submission</h5>
+                        <div class="date-highlight">15/03/2026</div>
                     </div>
                 </div>
             </div>
@@ -552,7 +553,10 @@
                 <div class="guidelines-content about-content">
                     <h3 class="mb-4">Publication</h3>
                     <ul class="guidelines-list" style="list-style-type: none; padding-left: 0;">
-                        <li>To be updated soon</li>
+                        <li>Selected papers will be considered in the following journals:</li>
+                        <div style="margin-left: 25px; margin-top: 8px;">
+                        <h6 style="margin: 5px 0;">International Journal of Computer Applications (CSE Domain)</h6>
+                        <h6>Thiagarajar Journal of Engineering, Science, Design & Technology (All Domain)</h6>
                     </ul>
                 </div>
 
@@ -645,6 +649,24 @@
   </div>
 </section>
 
+<!-- Sponsorship Payment -->
+    <section id="registration" class="py-5 bg-light">
+        <div class="container">
+    <div class="row">
+                <div class="col-lg-8 mx-auto">
+    <div class="payment-info mt-5">
+                        <h4>Sponsorship Payment Information</h4>
+                        <p>NEFT/RTGS for Sponsors</p>
+                        <p><strong>Account Name:</strong> TCE SOUVENIOR</p>
+                        <p><strong>Bank Name:</strong> ICICI Bank</p>
+                        <p><strong>Branch Name:</strong> TCE Madurai</p>
+                        <p><strong>Account Number:</strong> 601301902011</p>
+                        <p><strong>IFSC Code:</strong> ICICI0000563</p>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Committee Section -->
     <section id="committee" class="py-5">
