--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       <!-- Speaker 1 -->
       <div class="col-md-6 col-lg-4">
         <div class="speaker-card text-center p-4 shadow-sm rounded">
-          <img src="attached_assets\white.png" 
+          <img src="attached_assets\hari.jpg" 
                alt="Mr Hariharaputhiran H" 
                class="img-fluid rounded-circle mb-3"
                style="width:160px; height:160px; object-fit:cover;">
@@ -349,7 +349,7 @@
     <!-- Speaker 6 -->
 <div class="col-md-6 col-lg-4">
   <div class="speaker-card text-center p-4 shadow-sm rounded">
-    <img src="attached_assets\white.png" 
+    <img src="attached_assets/sounganesh.jpg" 
          alt="Mr R Sundara Ganesh" 
          class="img-fluid rounded-circle mb-3"
          style="width:160px; height:160px; object-fit:cover;">
@@ -970,22 +970,53 @@
 
 
     <!-- Event Brochure Modal -->
-    <div class="modal fade" id="brochureModal" tabindex="-1" aria-labelledby="brochureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="brochureModalLabel">
-                        <i class="bi bi-file-earmark-pdf me-2"></i>Event Brochure
-                    </h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body p-0">
-                    <div class="brochure-carousel" id="brochureCarousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="attached_assets/image_1756394869834.jpg" class="d-block w-100" alt="Event Brochure Page 1">
-                            </div>
+<div class="modal fade" id="brochureModal" tabindex="-1" aria-labelledby="brochureModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="brochureModalLabel">
+                    <i class="bi bi-file-earmark-pdf me-2"></i>Event Brochure
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+
+            <div class="modal-body p-0">
+                <div id="brochureCarousel" class="carousel slide" data-bs-ride="carousel">
+                    
+                    <div class="carousel-inner">
+                        
+                        <!-- First Image -->
+                        <div class="carousel-item active">
+                            <img src="attached_assets/image_1756394869834.jpg" 
+                                 class="d-block w-100" 
+                                 alt="Event Brochure Page 1">
                         </div>
+
+                        <!-- Second Image -->
+                        <div class="carousel-item">
+                            <img src="attached_assets/image2.jpeg" 
+                                 class="d-block w-100" 
+                                 alt="Event Brochure Page 2">
+                        </div>
+
+                    </div>
+
+                    <!-- Previous Button -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#brochureCarousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </button>
+
+                    <!-- Next Button -->
+                    <button class="carousel-control-next" type="button" data-bs-target="#brochureCarousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </button>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
